--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,59 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.table-data {
+  display: table;
+  min-width: 100%;
+  max-width: 100%;
+  font-size: calc(12px + 0.5vw);
+  border-collapse: collapse;
+}
+
+.table-data thead td {
+  font-weight: bold;
+  background-color: rgb(224, 224, 224);
+  text-align: center;
+}
+
+.table-data tbody tr:nth-child(odd) td {
+  background-color: #ffffff;
+}
+
+.table-data tbody tr:nth-child(even) td {
+  background-color: #f5f5f5;
+}
+
+.table-data td {
+  border-left: 1px solid rgb(128, 128, 128);
+  padding: 4px;
+}
+
+.table-data td:first-child {
+  border-left: none;
+}
+
+.table-controls td {
+  padding-bottom: 4px;
+  height: 25px;
+  max-height: 25px;
+}
+
+.table-controls tr td:last-child {
+  padding-left: 10px;
+}
+
+.table-controls input[type="text"], input[type="date"] {
+  max-width: 130px;
+}
+
+.button-right {
+  float: right;
+}
+
+.flexbox-container {
+  display: flex;
+  flex-direction: row;
+  /*column-gap: 100px;*/
+  justify-content: space-around;
+}
